# velora

./: .env.miner  .gitignore  README.md  docker-compose.yml  geth-config.toml  requirements.txt
base_model/: X_scaler.pkl  lstm_model.h5  y_scaler.pkl
db/: db_manager.py  miner_db.py  validator_db.py
ops/: docker-compose.yml
pool_data_fetcher/: Cargo.toml
pool_data_fetcher/src/: lib.rs
rust_backend/: Cargo.toml
rust_backend/src/: lib.rs
src/: cli.py
src/miner/: base_model.py  cli.py  create_lstm_model.py  miner.py  predict_lstm_model.py
src/subnet/: cli.py
src/subnet/miner/: cli.py  miner.py  model.py
src/subnet/validator/: validator.py
src/validator/: validator.py
utils/: bfs.py  config.py  helpers.py  protocols.py  utils.py
