[package]
name = "pool_data_fetcher"
version = "0.1.1"
edition = "2021"

[dependencies]
ethers = "2.0.14"
tokio = { version = "1.24", features = ["full"] }
serde = "1.0.137"
serde_json = "1.0.82"
ethers-abi = { version = "18.0.0"}
futures = "0.3.30"
solana-client = "2.0.10"
solana-sdk = "2.0.10"
solana-program = "2.0.10"
spl-token = "6.0.0"
reqwest = "0.12.7"
axum = "0.6.4"
chrono = "0.4.38"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
env_logger = "0.11.5"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
sha2 = "0.10.8"

[lib]
crate-type = ["cdylib"]

[dependencies.maturin]
version = "0.10.0"

[package.metadata.maturin]
python-versions = ">=3.10 < 4.0"

[patch.crates-io]
der = { git = "https://github.com/tavakyan/formats.git", branch = "fix/downgrade-zeroize-version" }
curve25519-dalek = { git = "https://github.com/solana-labs/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }
